Update score header.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <!-- right board -->
             <div class="left-score">
-                <h1 class="team">GUESS</h1>
+                <h1 class="team">AWAY</h1>
                 <div class="score-box">
                     <div id="score-right">0</div>
                 </div>
